--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ParagVadher",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
