--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.6.0",
     "node-sass-middleware": "^1.0.1",
     "notie": "^4.3.1",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
