--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "notie": "^4.3.1",
     "noty": "^3.2.0-beta-deprecated",
