--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
     "notie": "^4.3.1",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
