--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
+    "nodemailer": "^6.8.0",
     "notie": "^4.3.1",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
